--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ a {
   width: 76px;
   height: 20px;
   font-family: 700;
-  font-size: 35px;
+  font-size: 30px;
   line-height: 20px;
   color: #6070ff;
 }
@@ -39,6 +39,12 @@ p {
   background-color: #fff;
   cursor: pointer;
   width: 45px;
+}
+
+.hamburger-icon {
+    width: 33px;
+    height: 33px;
+    padding-top: 5px;
 }
 
 .header {
