create about section and style the section

--- a/style.css
+++ b/style.css
@@ -28,6 +28,15 @@ h1 {
   height: 150px;
 }
 
+h4 {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #253858;
+  display: flex;
+  align-items: center;
+}
+
 p {
   font-weight: 400;
   font-size: 16px;
@@ -284,4 +293,107 @@ img.dot {
 .buttons:disabled {
   background: #fff;
   cursor: pointer;
+}
+
+.about {
+  min-height: 120vh;
+  background-color: #fff;
+  border-top-right-radius: 100px;
+}
+
+.A-title {
+  color: #172b4d;
+  padding: 50px 0px 0px 20px;
+  font-size: 32px;
+  font-weight: 700;
+  width: 295px;
+}
+
+.skill-sets{
+  display: flex;
+  justify-content: space-around;
+  height: 72px;
+  align-items: center;
+  margin-bottom: 12px;
+
+}
+
+.button-about {
+  margin-top: 30px;
+  margin-bottom: 12px;
+  padding-left: 20px;
+}
+
+.btn {
+  border: 1px solid #6070ff;
+  border-radius: 10px;
+  height: 48px;
+  outline: none;
+  background-color: white;
+  color: #396df2;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  cursor: pointer;
+  padding: 12px;
+}
+
+.langTitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  width:205px;
+  height:24px;
+}
+
+.languages {
+  display: flex;
+  justify-content: space-around;
+  height: 72px;
+  align-items: center;
+  margin-bottom: 12px;
+}
+
+.languages-list {
+  list-style: none;
+}
+
+.lang-skills {
+  background: #f7f7f9;
+  display: flex;
+  padding: 12px 9px;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 12px;
+  width: 303px;
+  height: 66.72px;
+  border-radius: 8px;
+}
+
+.programming-skills {
+  padding: 0;
+}
+
+#langImag {
+  width: 50px;
+  height: 50px;
+}
+
+hr {
+  width: 90%;
+  background-color: #dfe1e6;
+  border: none;
+  height: 2px;
+}
+
+#arrow {
+  width: 10px;
+  height: 20px;
+  margin-left: -25px ;
+}
+
+#drop {
+  width: 20px;
+  height: 10px;
+  margin-left: -38px;
 }
