--- a/style.css
+++ b/style.css
@@ -599,6 +599,117 @@ button {
   line-height: 44px;
 }
 
+/* ----MODAL POPUP SECTION---- */
+
+.modal-popup {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: auto;
+  background-color: rgb(196, 203, 215, 0.5);
+  backdrop-filter: blur(10px);
+}
+
+.modal_container {
+  background-color: #fff;
+  width: 85%;
+  margin: 10px auto;
+  padding: 0 16px;
+  border-radius: 16px;
+  overflow: auto;
+  padding-top: 2%;
+  padding-bottom: 4%;
+}
+
+.modal_wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.modal_btn_wrapper {
+  width: 24px;
+  margin-top: 12px;
+}
+
+.modal_close_btn {
+  border: none;
+  background: none;
+  padding: 0;
+}
+
+.info_modal {
+  display: flex;
+  gap: 13px;
+  margin-top: 10px;
+  list-style-type: none;
+  align-items: baseline;
+}
+
+ul.info_modal {
+  margin-left: -35px;
+}
+
+.modal-imag {
+  width: 100%;
+  margin: 0 auto;
+}
+
+#modal-im {
+  width: 100%;
+}
+
+.modal_content {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal_description p {
+  padding: 0;
+  font-size: 15px;
+  color: #344563;
+  line-height: 24px;
+}
+
+.modal_languages {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-top: 12px;
+  list-style: none;
+  padding: 0;
+  margin-bottom: 0;
+}
+
+.modal_btns {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-top: 40px;
+}
+
+.modal_btn {
+  align-items: center;
+  width: 150px;
+}
+
+.modalBtn {
+  display: flex;
+  align-items: center;
+  height: 25px !important;
+  gap: 5px;
+  justify-content: center;
+}
+
+#text_modal {
+  font-size: 1.5rem;
+}
+
 /* ----MEDIA QUERIES SECTION---- */
 
 /* || DESKTOP VERSION */
