modified index.html, created works section dynamically at script.js and modified style.css

--- a/style.css
+++ b/style.css
@@ -153,16 +153,35 @@ p {
   width: 295px;
 }
 
+.dot-0 {
+  width: 8px;
+  height: 8px;
+}
+
+.dot-1 {
+  width: 8px;
+  height: 8px;
+}
+ .dot-2 {
+  display: none;
+} 
+
 .p-title {
   font-size: 32px;
 }
 
 .p-info {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 0;
   gap: 12px;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.role p {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #485060;
 }
 
 ul li {
@@ -183,8 +202,48 @@ ul li {
   font-size: 13px;
   line-height: 16px;
   color: #344563;
-  width: 55px;
-  height: 16px;
+}
+
+.company p {
+  display: flex;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #485060;
+  text-transform: uppercase;
+}
+
+.description p {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  color: #344563;
+}
+
+.languagesj {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-top: 12px;
+  list-style: none;
+  padding: 0;
+  margin-bottom: 0;
+}
+
+.langu {
+  background: #ebebff;
+  border-radius: 8px;
+  padding: 4px 12px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #0018f0;
+}
+
+.button-container {
+  margin-top: 30px;
+  margin-bottom: 12px;
 }
 
 .position {
@@ -217,7 +276,7 @@ img.dot {
   font-size: 15px;
   line-height: 24px;
   color: #344563;
-  width: 295px;
+  /* width: 295px; */
 }
 
 .web-lang {
@@ -602,7 +661,7 @@ button {
 /* ----MODAL POPUP SECTION---- */
 
 .modal-popup {
-  /* display: none; */
+  display: none;
   position: fixed;
   z-index: 1;
   width: 100%;
@@ -774,6 +833,21 @@ ul.info_modal {
     margin: 0;
   }
 
+  .p-info {
+    margin-left: -20px;
+  }
+
+  .description p {
+    margin-left: -20px;
+  }
+
+  .languagesj {
+    margin-left: -20px;
+  }
+  h2#p-title {
+    margin-left: -20px;
+  }
+
   .info-head1 {
     width: auto;
     margin-top: -20px;
@@ -785,6 +859,12 @@ ul.info_modal {
     margin-left: -22px;
   }
 
+  div.project-content {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
   .logo {
     font-size: x-large;
     margin-left: -250px;
@@ -793,11 +873,12 @@ ul.info_modal {
 
   .cards {
     flex-direction: row;
-    gap: 50px;
+    gap: 100px;
     justify-content: space-between;
     align-items: center;
     width: 80%;
     margin: 0 auto;
+    padding: 24px;
   }
 
   .p-title {
@@ -821,8 +902,6 @@ ul.info_modal {
   }
 
   .portfolio-pic {
-    width: 544px;
-    height: 448px;
     transition: box-shadow 0.2s ease-out;
   }
 
@@ -833,8 +912,6 @@ ul.info_modal {
 
   .portfolio-pic2,
   .portfolio-pic4 {
-    width: 544px;
-    height: 448px;
     transition: box-shadow 0.2s ease-out;
   }
 
@@ -848,9 +925,20 @@ ul.info_modal {
     border-radius: 16px;
   }
 
-  .rev-2,
-  .rev-4 {
+  .rev-1 {
     flex-direction: row-reverse;
+  }
+
+  .rev-1 div.project-content {
+    margin-left: 20px;
+  }
+
+  .rev-3 {
+    flex-direction: row-reverse;
+  }
+
+  .rev-3 div.project-content {
+    margin-left: 20px;
   }
 
   .contact-form {
@@ -921,9 +1009,9 @@ ul.info_modal {
     margin-left: -20px;
   }
 
-  h2 {
+  /* h2 {
     margin-top: -80px;
-  }
+  } */
 
   .connect-social {
     margin-top: 1px;
@@ -1008,5 +1096,36 @@ ul.info_modal {
 
   #lang {
     margin-right: 92px;
+  }
+
+  .modal_content {
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 50px;
+    justify-content: space-between;
+  }
+
+  .modal_description {
+    margin-bottom: 50px;
+    width: 778px;
+  }
+
+  .modal-img {
+    margin: 28px auto 59px auto;
+  }
+
+  .modal_btns {
+    display: flex;
+    align-items: baseline;
+    gap:40px;
+    margin-top: 10px;
+  }
+
+  p#des.text_modal {
+    margin-top: 40px;
+  }
+
+  ul.web-lang {
+    margin-top: 40px;
   }
 }
