--- a/style.css
+++ b/style.css
@@ -671,8 +671,8 @@ button {
   top: 0;
   left: 0;
   overflow: auto;
-  background-color: rgb(196, 203, 215, 0.5);
-  backdrop-filter: blur(10px);
+  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0, 0.5);
 }
 
 .modal_container {
@@ -1130,5 +1130,10 @@ ul.info_modal {
 
   ul.web-lang {
     margin-top: 40px;
+    margin-left: -20px;
+  }
+
+  .modal_container {
+   width: 70%;
   }
 }
